<resources>

    <string name="app_name">SaveClass</string>
    <string name="categories">Categorías</string>
    <string name="notes">Notas</string>
    <string name="favorites">Favoritos</string>
    <string name="settings">Preferencias</string>
    <string name="new_note">Crear nota</string>
    <string name="snackbar_ok">De acuerdo</string>

    <string name="camera_permission_required">Se requiere permiso a la cámara para usar esta función.</string>

    <!-- Categories -->
    <plurals name="n_notes">
        <item quantity="one">%d nota.</item>
        <item quantity="other">%d notas.</item>
    </plurals>
    <string-array name="categories_options">
        <item>Sin categoría (%d)</item>
        <item>Favoritos (%d)</item>
        <item>Bloqueados (%d)</item>
        <item>Archivados (%d)</item>
        <item>Papelera (%d)</item>
    </string-array>

    <!-- Notes -->
    <string name="note_favorite">Añadir a favoritos</string>
    <string name="note_remove_favorite">Quitar de favoritos</string>
    <string name="note_archive">Archivar</string>
    <string name="note_unarchive">Desarchivar</string>
    <string name="note_pin">Anclar</string>
    <string name="note_unpin">Desanclar</string>
    <string name="note_remove">Borrar</string>
    <string name="note_duplicate">Duplicar</string>
    <string name="note_lock">Bloquear</string>
    <string name="note_unlock">Desbloquear</string>
    <string name="note_share">Compartir</string>
    <string name="take_picture_error">Hubo un problema al guardar la foto</string>
    <!-- Note -->
    <string name="writeNote">Escribe una nota…</string>
    <string name="msg_note_saved">Nota guardada</string>
    <string name="save">Guardar</string>
    <string name="textFormat">Formato de texto</string>
    <string name="attachFile">Adjuntar archivo</string>
    <string name="noteTitle">Título</string>
    <string name="new_category">Nueva categoria</string>
    <string name="note_head">%1$s\n| %2$d palabras</string>
    <string name="no_title">Sin título</string>
    <string name="bin">Papelera</string>

    <!--Preferences-->
    <string name="general">General</string>
    <string name="default_category">Categoría predeterminada</string>
    <string name="show_pictures">Mostrar fotos</string>
    <string name="date_format">Formato de fecha</string>
    <string name="security">Seguridad</string>
    <string name="password">Contraseña</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="about">Acerca de</string>
    <string name="share_app">Compartir aplicación</string>
    <string name="version">Versión 0.0</string>
    <string name="tag">Etiqueta</string>
    <string name="add_picture">Agregar foto</string>

</resources>