<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.Material3.BottomSheet.Modal"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:context=".ui.view.notes.NoteOptionsBottomSheet">
    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_note_title"
        tools:text="EL TITULO"
        android:maxLength="32"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <HorizontalScrollView
        android:layout_marginVertical="8dp"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_share_note"
                style="?attr/materialIconButtonFilledTonalStyle"
                app:icon="@drawable/baseline_share_24"
                android:text="@string/note_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_favorite_note"
                app:icon="@drawable/sl_favorite_24dp"
                android:text="@string/note_favorite"
                style="?attr/materialIconButtonFilledTonalStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btn_duplicate_note"
                app:icon="@drawable/baseline_file_copy_24"
                android:text="@string/note_duplicate"
                style="?attr/materialIconButtonFilledTonalStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btn_lock_note"
                app:icon="@drawable/baseline_lock_24"
                android:text="@string/note_lock"
                style="?attr/materialIconButtonFilledTonalStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btn_delete_note"
                app:icon="@drawable/baseline_delete_24"
                android:text="@string/note_remove"
                style="?attr/materialIconButtonFilledTonalStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </HorizontalScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>