<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.view.note.NoteFragment">
    <com.google.android.material.appbar.AppBarLayout
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            app:navigationIcon="@drawable/ic_baseline_check_24"
            app:navigationIconTint="@color/black"
            android:background="@android:color/transparent"
            app:title=""
            app:menu="@menu/menu_note_app_bar"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"/>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_head_note"
            android:layout_marginHorizontal="8dp"
            android:textSize="12sp"
            tools:text="@string/note_head"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTitle"
            android:layout_marginTop="2dp"
            android:layout_marginHorizontal="8dp"
            android:textSize="28sp"
            android:background="@android:color/transparent"
            android:textColorHint="@color/black"
            android:hint="@string/noteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_head_note"/>
        <Button
            android:id="@+id/btn_category"
            style="@style/Widget.Material3.Button.IconButton"
            app:icon="@drawable/ic_outline_book_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtTitle"/>
        <Spinner
            android:id="@+id/spCategories"
            android:layout_width="200dp"
            android:layout_height="32dp"
            android:maxWidth="200dp"
            android:layout_marginStart="2dp"
            app:layout_constraintTop_toTopOf="@id/btn_category"
            app:layout_constraintBottom_toBottomOf="@id/btn_category"
            app:layout_constraintLeft_toRightOf="@id/btn_category"/>

        <!--<com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddTag"
            style="@style/Widget.Material3.Button.IconButton"
            app:icon="@drawable/ic_outline_new_label_24"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/spCategories"
            app:layout_constraintTop_toTopOf="@id/hsChTagGroup"
            app:layout_constraintBottom_toBottomOf="@id/hsChTagGroup"/>
        <HorizontalScrollView
            android:id="@+id/hsChTagGroup"
            android:scrollbars="none"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edtTitle"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btnAddTag">
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chTagGroup"
                app:singleLine="true"
                android:layout_marginStart="2dp"
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>
        </HorizontalScrollView>-->

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/btn_category"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="0dp"
            android:layout_height="0dp">
            <ScrollView
                android:fillViewport="true"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:id="@+id/img_slider"
                        android:visibility="gone"
                        android:layout_width="0dp"
                        android:layout_height="140dp">
                        <androidx.viewpager2.widget.ViewPager2
                            android:id="@+id/vp_images"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                        <com.google.android.material.tabs.TabLayout
                            android:id="@+id/tb_images"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:tabBackground="@drawable/tab_pager_selector"
                            app:tabGravity="center"
                            app:tabIndicatorHeight="0dp"
                            android:backgroundTint="@android:color/transparent"
                            android:layout_alignParentBottom="true"/>
                    </RelativeLayout>
                    <androidx.cardview.widget.CardView
                        android:id="@+id/cd_edt_note"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginTop="4dp"
                        app:cardElevation="2dp"
                        app:cardUseCompatPadding="true"
                        app:cardCornerRadius="12dp"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">
                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edtNote"
                            android:layout_margin="4dp"
                            android:padding="4dp"
                            android:textSize="16sp"
                            android:background="@android:color/transparent"
                            android:textColorHint="@color/black"
                            android:hint="@string/writeNote"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </androidx.cardview.widget.CardView>
                </androidx.appcompat.widget.LinearLayoutCompat>

            </ScrollView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cd_format_text_options"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                app:cardCornerRadius="32dp"
                app:cardElevation="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/format_text_options"
                    app:singleSelection="false"
                    android:elevation="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                        app:icon="@drawable/ic_baseline_format_bold_24" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnItalic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                        app:icon="@drawable/ic_baseline_format_italic_24" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnUnderlined"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                        app:icon="@drawable/ic_baseline_format_underlined_24" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                        app:icon="@drawable/ic_baseline_format_color_text_24" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                        app:icon="@drawable/ic_baseline_format_list_bulleted_24" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnListNumbered"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                        app:icon="@drawable/ic_baseline_format_list_numbered_24" />
                </com.google.android.material.button.MaterialButtonToggleGroup>
            </androidx.cardview.widget.CardView>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>